avance/solutions/network-policies/yaml/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-wordpress-vanessa
  labels:
    environment: dev
    security-level: standard
